feat: Implement DSEL-based trading simulator with data ingestion